--- a/install
+++ b/install
@@ -1,17 +1,21 @@
-#!/usr/bin/env bash
+#!/usr/bin/env zsh 
+
+export DOTFILES=$HOME/.dotfiles
+STOW_FOLDERS="nvim"
+
 # Creating directory for nvim config
 echo "Executing initialization script for dotfiles"
-mkdir -p ~/.config/nvim
-mkdir -p ~/.config/nvim/lua
-mkdir -p ~/.config/nvim/lua/jzt
-mkdir -p ~/.config/nvim/plugin
-mkdir -p ~/.config/nvim/after/plugin
 
-# link errthing
-# finds all vim and lua files and links anything
-# in dotfiles to its respective nvim life
-for f in `find . -regex ".*\.vim$\|.*\.lua$"`; do 
-    echo "$f"
-    rm -rf ~/.config/nvim/$f 
-    ln -s ~/.dotfiles/$f ~/.config/nvim/$f
+# Stowing everything
+# This will specify everything in $STOW_FOLDERS
+# as a directory inside .dotfiles and stow it
+# stow will make a symbolic link with everything in here
+# and point to the directory below the directory we are running it in
+# for example /home/jarrod/.dotfiles running this script in there
+# will link everything to /home/jarrod
+for folder in $(echo $STOW_FOLDERS | sed "s/,/ /g") 
+do
+    echo "$folder"
+    stow -D $folder
+    stow $folder
 done
